[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-chutes-provider"
version = "0.1.3"
description = "Chutes model-provider plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Michael Gasperini (Mikesoft)" },
]
keywords = ["chutes", "hermes-agent", "llm", "model-provider"]
dependencies = []

[project.urls]
Homepage = "https://github.com/TheStreamCode/hermes-chutes-provider"
Repository = "https://github.com/TheStreamCode/hermes-chutes-provider"
Issues = "https://github.com/TheStreamCode/hermes-chutes-provider/issues"
Chutes = "https://chutes.ai"

[project.entry-points."hermes_agent.model_providers"]
chutes = "hermes_chutes_provider:register"

[tool.setuptools]
packages = ["hermes_chutes_provider"]
